[tool.poetry]
name = "summit_python_assignment"
version = "0.1.0"
description = ""
authors = ["Jatin Goel <jatin.goel@thesummitgrp.com>"]

[tool.poetry.dependencies]
python = "3.8.9"
Flask = "^2.0.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
